k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /rooms
        backend:
          service:
            name: room-service
            port:
              number: 3000
      - pathType: Prefix
        path: /bookings
        backend:
          service:
            name: booking-service
            port:
              number: 3000
